[gd_scene load_steps=3 format=3 uid="uid://ph3p8obfj23b"]

[ext_resource type="Script" uid="uid://e5xxm7o42o4d" path="res://scripts/dialoguesys.gd" id="1_3421h"]
[ext_resource type="Texture2D" uid="uid://bxkjqfx3f6hev" path="res://img/diabox.png" id="2_a8p2u"]

[node name="DialogueSystem" type="Control"]
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3421h")

[node name="DialogueBox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -106.0
offset_right = 6.10352e-05
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_a8p2u")
region_rect = Rect2(0, 0, 60, 60)
patch_margin_left = 50
patch_margin_right = 50

[node name="ProfilePicture" type="TextureRect" parent="DialogueBox"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 220.0
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = 140.8
offset_top = 18.4
offset_right = 340.8
offset_bottom = 73.4
theme_override_font_sizes/font_size = 40

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 0
offset_left = 140.8
offset_top = 74.4
offset_right = 890.8
offset_bottom = 214.4
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
